# panda

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AI_REVIEW_CHECKLIST.md  BUILD_COMPARISON_PIPELINE_README.md  CLAUDE.md  CONTRIBUTING.md  CRYPTO_MODULE_MIGRATION_REPORT.md  Dockerfile  Dockerfile.panda  FINAL_BOUNTY_COMPLETION_ASSESSMENT.md  FORK_AND_TEST_PLAN.md  FORK_CONTENTS_SUMMARY.md  FORK_TESTING_INSTRUCTIONS.md  Jenkinsfile  LICENSE  MANIFEST.in  MODULAR_BUILD_COMPLETION_REPORT.md  MODULAR_BUILD_IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_PROGRESS.md  SConscript  SConscript.incremental  SConscript.modular  SConscript.test  SConstruct  SConstruct.test  SOURCE_HEADER_REFACTORING.md  TASK.md  TODO  UPDATING.md  VERSION  __init__.py  build_backend.py  build_comparison_pipeline.py  ci_validation_pipeline.py  compare_legacy_modular.py  comprehensive_validation.py  (+44 more)
.circleci/: config.yml
.github/workflows/: build-f4.yml  build_drivers.yaml  drivers.yaml  package.yml  repo.yml  test.yaml  update-cppcheck.yml
board/: Makefile  Makefile.legacy  PANDA_BOUNTY_2171_CODING_STANDARDS.md  PANDA_BOUNTY_2171_REFACTORING_PLAN.md  PANDA_BOUNTY_2171_VALIDATION_REPORT.md  README  README.md  SConscript  STM32H735ZGTx_FLASH.ld  adc.h  board.h  board_declarations.h  board_forward.h  board_struct.h  boot_state.h  bootmode.h  bootstub.c  bootstub_declarations.c  bootstub_declarations.h  bootstub_definitions.c  bootstub_definitions.h  bootstub_globals.c  bootstub_globals.h  build.mk  build_all.sh  build_n_flash.sh  can.c  can.h  can_comms.c  can_comms.h  can_declarations.h  can_definitions.c  can_definitions.h  can_health.h  can_macros.h  comms.h  comms_constants.h  comms_definitions.h  communication.h  config.h  (+89 more)
board/boards/: black.c  black.h  board.h  board_black.c  board_cuatro.c  board_declarations.h  board_dos.c  board_functions.h  board_grey.c  board_red.c  board_tres.c  board_uno.c  board_white.c  boards.h  body.h  body_v2.h  boot_state.h  common.h  cuatro.c  cuatro.h  dos.c  dos.h  grey.c  grey.h  pedal.h  purple.h  pzilla.h  quatro.h  red.c  red.h  red2.h  red_chiplet.c  red_chiplet.h  red_v2.h  tres.c  tres.h  uno.c  uno.h  unused_funcs.c  unused_funcs.h  (+2 more)
board/body/: __init__.py  body_common.h  can.c  can.h  dotstar.h  flash.py  flash_helpers.py  main.c  main_comms.c  main_comms.h  main_definitions.c  motor_common.c  motor_common.h  motor_control.c  motor_control.h  motor_encoder.c  motor_encoder.h
board/body_v2/: flash.py  main.c
board/crypto/: rsa.c  rsa.h  sha.c  sign.py
board/debug/: can_replay.h  can_replay_data.h  debug_h7.sh  dfu_util_h7.sh  gen_can_replay_data.py
board/drivers/: adc.h  boot_state.h  bootkick.c  bootkick.h  bootkick_declarations.h  bxcan.c  bxcan.h  bxcan_declarations.h  can.h  can_common.c  can_common.h  can_common_panda.c  (+74 more)
boardesp/: .gitignore  Makefile  README.md  elm327.c  get_sdk.sh  get_sdk_ci.sh  get_sdk_mac.sh  proxy.c  st_ota.c  tcp_ota.c  webserver.c
build_comparison_results/: build_comparison_report_1760948052.json  build_comparison_report_1760948058.json  build_comparison_report_1760948183.json  build_comparison_report_1760948184.json  build_comparison_report_1760948186.json  build_comparison_report_1760948262.json  latest_comparison_report.json  performance_history.json
ci_artifacts/: ci_validation_report.json
common/: version.mk
crypto/: getcertheader.py  rsa.c  sha.c  sign.py
docs/: isotp_architecture.md  panda_wifi_setup.md
driver/: Makefile  panda.c
driver_test/: Makefile  main.c
examples/: can_bit_transition.py  can_logger.py  can_recorder.py  can_replay.py  can_unique.py  eps_read_software_ids.py  get_panda_password.py  isotp.py  query_fw_versions.py  query_vin.py  query_vin_and_stats.py  tesla_tester.py  vw_mqb_config.py
include/: fake_stm.h
lib/: panda.py
migration_orchestration/: comprehensive_1760948051.json  latest_orchestration_result.json
modules/: module_registry.py
mypy_after/: any-exprs.txt  linecount.txt  lineprecision.txt  types-of-anys.txt
mypy_before/: any-exprs.txt  index.html  linecount.txt  lineprecision.txt  types-of-anys.txt
panda/: __init__.py  constants.py  dfu.py  flash_release.py
performance_analysis_results/: performance_report_1760948179.json
plan/: issue-1981.md
python/: ]  __init__.py  _typing.py  base.py  can.py  ccp.py  cli.py  config.py  constants.py  dfu.py  esptool.py  flash_release.py  isotp.py  mcu_defs.py  pycan.py  pycanpanda.py  serial.py  socketpanda.py  spi.py  spi_dfu.py  uds.py  update.py  usb.py  utils.py  xcp.py
release/: flash_release.py  make_release.sh
scripts/: benchmark.py  build_third_party.sh  can_health.py  check_fw_size.py  check_wheel.py  get_version.py  reflash_internal_panda.py  spi_test.py  test_canfd.py
tests/: Dockerfile  SConscript  __init__.py  all_wifi_test.py  benchmark.py  black_loopback_test.py  black_white_loopback_test.py  black_white_relay_endurance.py  black_white_relay_test.py  bulk_write_test.py  can_health.py  can_printer.py  check_fw_size.py  ci_reset_hw.py  ci_reset_internal_hw.py  ci_resetter.py  ci_shell.sh  debug_console.py  disable_esp.py  echo.py  elm_car_simulator.py  elm_throughput.py  elm_wifi.py  fan_overshoot_test.py  fan_test.py  get_version.py  gmlan_harness_test.py  gps_stability_test.py  health_test.py  health_test_spi.py  ir_test.py  location_listener.py  loopback_test.py  message_drop_test.py  my_receive.py  print_logs.py  pzilla_test.py  read_flash_spi.py  read_winusb_descriptors.py  reflash_internal_panda.py  (+12 more)
tools/: flash_panda
validation_reports/: latest_validation_report.json  validation_1760948183_executive_summary.json  validation_1760948183_migration_checklist.json
(+749 files in other folders)
