[project]
name = "pandacan"
version = "0.0.11"
description = "Code powering the comma.ai panda"
readme = "README.md"
requires-python = ">=3.11,<3.13"  # macOS doesn't work with 3.13 due to pycapnp from opendbc
license = {text = "MIT"}
authors = [{name = "comma.ai"}]
maintainers = [{name = "comma.ai"}]
keywords = ["panda", "can", "vehicle", "comma", "openpilot", "hardware", "embedded"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Hardware",
  "Topic :: System :: Hardware :: Hardware Drivers",
  "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
  "libusb1",
]

[project.urls]
Homepage = "https://github.com/commaai/panda"
Repository = "https://github.com/commaai/panda"
"Bug Reports" = "https://github.com/commaai/panda/issues"
Changelog = "https://github.com/commaai/panda/blob/master/README.md"

[project.scripts]
panda-health = "panda.scripts.can_health:main"
panda-flash = "panda.scripts.reflash_internal_panda:main"
panda-version = "panda.scripts.get_version:main"

[project.optional-dependencies]
dev = [
  "scons",
  "pycryptodome >= 3.9.8",
  "cffi",
  "flaky",
  "pytest",
  "pytest-mock",
  "pytest-timeout",
  "pytest-randomly",
  "ruff",
  "mypy",
  "setuptools",
  "spidev; platform_system == 'Linux'",
  "opendbc @ git+https://github.com/commaai/opendbc.git@master#egg=opendbc",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["panda"]
include-package-data = true

[tool.setuptools.package-dir]
panda = "."

[tool.setuptools.package-data]
"panda" = [
  "board/**/*.h",
  "board/obj/*.bin",
  "board/obj/*.signed",
  "certs/**",
]

[tool.mypy]
# third-party packages
ignore_missing_imports = true

# helpful warnings
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

# restrict dynamic typing
warn_return_any = true

# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
line-length = 160
target-version="py311"

[tool.ruff.lint]
select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF100", "A"]
ignore = ["W292", "E741", "E402", "C408", "ISC003"]
flake8-implicit-str-concat.allow-multiline=false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pytest.main".msg = "pytest.main requires special handling that is easy to mess up!"

[tool.pytest.ini_options]
addopts = "-Werror --strict-config --strict-markers --durations=10 --ignore-glob='*.sh' --ignore=tests/misra --ignore=tests/som --ignore=tests/hitl"
python_files = "test_*.py"
testpaths = [
  "tests/"
]
